[package]
name = "transcriptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3"
whisper-rs = "0.8.0"
anyhow = "1.0.70"
cpal = "0.15.1"
itertools = "0.10.5"
ringbuf = "0.3.2"
webrtc-vad = "0.4"
eframe = "0.22.0"
env_logger = "0.10.0"
